1.高可用性集群部署/config/hello/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  labels:
    app: hello
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
        track: stable
    spec:
      containers:
        - name: nginx
          image: nginx:1.15
          ports:
            - name: http
              containerPort: 80
          resources:
            limits:
              cpu: 500m
              memory: 0.5Gi
            requests:
              cpu: 0
              memory: 0.5Gi
          livenessProbe:
            httpGet:
              path: /
              port: 80
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 80
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 1
          volumeMounts:
            - name: "nginx-conf"
              mountPath: "/etc/nginx/conf.d"
            - name: "uwsgi-sock"
              mountPath: "/tmp"
        - name: hello
          image: findsec/hello:v1
          ports:
            - name: http-stats
              containerPort: 9191
          resources:
            limits:
              cpu: 500m
              memory: 100Mi
            requests:
              cpu: 0
              memory: 100Mi
          volumeMounts:
            - name: "uwsgi-sock"
              mountPath: "/tmp"
      volumes:
        - name: "uwsgi-sock"
          emptyDir: {}
        - name: "nginx-conf"
          configMap:
            name: "hello"
            items:
              - key: "nginx-conf"
                path: "hello.conf"
