1.高可用性集群部署/config/hello/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-ingress
  labels:
    app: hello
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: hello.hipstershop.cn
      http:
        paths:
          - path: /
            backend:
              serviceName: hello
              servicePort: 80
